--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header class="header">
-		<h1>Direct Link Generator <small>For Images Stores in Google Drive</small></h1>
+		<h1>Direct Link Generator <small>For Images Hosted in Google Drive</small></h1>
 	</header>
 	<div class="content">
 		<div id="msg" style="display: none;">
